syntax = "proto3";

package runtime.v1alpha2;

// Runtime service defines the public APIs for remote container runtimes
service RuntimeService {
  // Pod operations
  rpc CreatePod(CreatePodRequest) returns (CreatePodResponse) {}
  rpc DeletePod(DeletePodRequest) returns (DeletePodResponse) {}
  rpc ListPods(ListPodRequest) returns (ListPodResponse) {}
  rpc StartPod(StartPodRequest) returns (StartPodResponse) {}
  rpc StopPod(StopPodRequest) returns (StopPodResponse) {}

  // Container operations
  rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse) {}
  rpc DeleteContainer(DeleteContainerRequest) returns (DeleteContainerResponse) {}
  rpc ListContainers(ListContainersRequest) returns (ListContainersResponse) {}
  rpc StartContainer(StartContainerRequest) returns (StartContainerResponse) {}
  rpc StopContainer(StopContainerRequest) returns (StopContainerResponse) {}
}

message DNSConfig {
  repeated string servers = 1;
  repeated string searches = 2;
  repeated string options = 3;
}

message PortMapping {
  string protocol = 1;
  int32 container_port = 2;
  int32 host_port = 3;
  string host_ip = 4;
}

message LinuxPodSandboxConfig {
  string cgroup_parent = 1;
  SecurityContext security_context = 2;
  map<string, string> sysctls = 3;
}

// Pod messages
message PodSandboxConfig {
  PodMetadata metadata = 1;
  string hostname = 2;
  string log_directory = 3;
  DNSConfig dns_config = 4;
  repeated PortMapping port_mappings = 5;
  LinuxPodSandboxConfig linux_config = 6;
  map<string, string> labels = 7;
  map<string, string> annotations = 8;
}

message PodMetadata {
  string name = 1;
  string uid = 2;
  string namespace = 3;
  uint32 attempt = 4;
}

message NetworkConfig {
  string pod_cidr = 1;
}

message LinuxConfig {
  string cgroup_parent = 1;
  SecurityContext security_context = 2;
  map<string, string> sysctls = 3;
}

message SecurityContext {
  NamespaceOption namespace_options = 1;
  SELinuxOption selinux_options = 2;
  RunAsUserOption run_as_user = 3;
  bool privileged = 4;
}

message NamespaceOption {
  bool host_network = 1;
  bool host_pid = 2;
  bool host_ipc = 3;
}

message SELinuxOption {
  string user = 1;
  string role = 2;
  string type = 3;
  string level = 4;
}

message RunAsUserOption {
  int64 uid = 1;
  int64 gid = 2;
  repeated int64 additional_gids = 3;
}

message CreatePodRequest {
  PodSandboxConfig config = 1;
}

message CreatePodResponse {
  string pod_sandbox_id = 1;
}

message DeletePodRequest {
  string pod_sandbox_id = 1;
}

message DeletePodResponse {}

message ListPodRequest {
  PodFilter filter = 1;
}

message PodFilter {
  string id = 1;
  PodState state = 2;
  map<string, string> label_selector = 3;
}

enum PodState {
  UNKNOWN = 0;
  CREATED = 1;
  RUNNING = 2;
  STOPPED = 3;
}

message ListPodResponse {
  repeated Pod items = 1;
}

message Pod {
  string id = 1;
  PodMetadata metadata = 2;
  PodState state = 3;
  int64 created_at = 4;
  map<string, string> labels = 5;
  map<string, string> annotations = 6;
}

message StartPodRequest {
  string pod_sandbox_id = 1;
}

message StartPodResponse {}

message StopPodRequest {
  string pod_sandbox_id = 1;
}

message StopPodResponse {}

// Container messages
message ContainerConfig {
  ContainerMetadata metadata = 1;
  ImageSpec image = 2;
  repeated string command = 3;
  repeated string args = 4;
  string working_dir = 5;
  repeated KeyValue envs = 6;
  repeated Mount mounts = 7;
  map<string, string> labels = 8;
  map<string, string> annotations = 9;
}

message ContainerMetadata {
  string name = 1;
  uint32 attempt = 2;
}

message ImageSpec {
  string image = 1;
}

message KeyValue {
  string key = 1;
  string value = 2;
}

message Mount {
  string container_path = 1;
  string host_path = 2;
  bool readonly = 3;
}

message CreateContainerRequest {
  string pod_sandbox_id = 1;
  ContainerConfig config = 2;
  PodSandboxConfig sandbox_config = 3;
}

message CreateContainerResponse {
  string container_id = 1;
}

message DeleteContainerRequest {
  string container_id = 1;
}

message DeleteContainerResponse {}

message ListContainersRequest {
  ContainerFilter filter = 1;
}

message ContainerFilter {
  string id = 1;
  string pod_sandbox_id = 2;
  ContainerState state = 3;
  map<string, string> label_selector = 4;
}

enum ContainerState {
  CONTAINER_UNKNOWN = 0;
  CONTAINER_CREATED = 1;
  CONTAINER_RUNNING = 2;
  CONTAINER_STOPPED = 3;
}

message ListContainersResponse {
  repeated Container containers = 1;
}

message Container {
  string id = 1;
  string pod_id = 2;
  ContainerMetadata metadata = 3;
  ImageSpec image = 4;
  string image_ref = 5;
  ContainerState state = 6;
  int64 created_at = 7;
  map<string, string> labels = 8;
  map<string, string> annotations = 9;
}

message StartContainerRequest {
  string container_id = 1;
}

message StartContainerResponse {}

message StopContainerRequest {
  string container_id = 1;
  int64 timeout = 2;
}

message StopContainerResponse {} 